starting updating bronnen bij figuren en listings

--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -468,4 +468,19 @@
   title  = {CHATBOT DEVELOPMENT AND DEPLOYMENT PLATFORM},
 }
 
+@Unpublished{LockitRentals,
+  author  = {Lockit Rentals, VD Group BV},
+  title   = {Lockit-app},
+  urldate = {2023-03-21},
+}
+
+@Software{Dorpe2023,
+  author       = {Wannes Van Dorpe},
+  date         = {2023-05-24},
+  title        = {App Lockit Rentals},
+  organization = {VD Group BV},
+  type         = {software},
+  url          = {https://app.lockit.rentals/home},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
