update bron vermelding bij elke figuur normaal done

--- a/bachproef/proofofconcept.tex
+++ b/bachproef/proofofconcept.tex
@@ -227,7 +227,7 @@ Als we kijken naar hedendaagse scanners zoals kassasystemen en toegangscontroles
     \centering
     \includegraphics[width=0.8\textwidth]{graphics/F29_aangekochteQRScannerHandleiding.jpg}
     \captionsetup{justification=centering, singlelinecheck=false}    
-    \caption{Handleiding aangekochte QR-code scanner.}
+    \caption{Handleiding aangekochte QR-code scanner \autocite{Co2022}.}
     \label{fig:handleidingNieuweQRScanner}
 \end{figure}}
 
