--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -55,7 +55,7 @@ Elke unit bevat 128 lockers die verspreid zijn over 4 kasten zoals te zien op fi
     \centering
     \includegraphics[height=7cm]{F1_lockerSlot.jpg}
     \captionsetup{justification=centering, singlelinecheck=false}    
-    \caption{Een locker slot.}
+    \caption{Een locker slot gebruikt om de lockers te sluiten.}
     \label{fig:lockerSlot}
 \end{figure}}
 
@@ -680,7 +680,7 @@ Om de problematiek van Lockit Rentals over de QR-code herkenning onder de loep t
     \centering
     \includegraphics{F20_ZijkantLocker.jpg}
     \captionsetup{justification=centering, singlelinecheck=false}
-    \caption{Het vooraanzicht van een QR-unit met camera en digitaal scherm.}
+    \caption{Het vooraanzicht van een QR-unit van Lockit Rentals met camera en digitaal scherm.}
     \label{fig:zijkantLocker}
 \end{figure}
 
@@ -688,7 +688,7 @@ Om de problematiek van Lockit Rentals over de QR-code herkenning onder de loep t
     \centering
     \includegraphics[angle=-90, width=0.4\textwidth]{F21_LockerUSBCamera.jpeg}
     \captionsetup{justification=centering, singlelinecheck=false}
-    \caption{De USB camera ingebouwd inclusief verlichting.}
+    \caption{De USB camera ingebouwd inclusief verlichting in een QR-unit van Lockit Rentals.}
     \label{fig:usbcameraLocker}
 \end{figure}
 \newpage
@@ -940,7 +940,7 @@ Het idee van een chatbot werd het eerst gepubliceerd in 1950 \autocite{Turing200
     \centering
     \includegraphics{F17_grafiekChatbotSearches.png}
     \captionsetup{justification=centering, singlelinecheck=false}    
-    \caption{Zoek resultaten in scopus voor de termen ‘chatbot’ of ‘conversation agent’ of ‘conversational interface’ vanaf 2000 tot 2019.}
+    \caption{Zoek resultaten in scopus voor de termen ‘chatbot’ of ‘conversation agent’ of ‘conversational interface’ vanaf 2000 tot 2019 \autocite{Adamopoulou2020}.}
     \label{fig:graphDocusChatbotAYear}
 \end{figure}
 
@@ -954,7 +954,7 @@ De start van de menselijke vraag tot een gegenereerd chatbot antwoord wordt voor
     \centering
     \includegraphics{F18_chatbotArchitectuur.png}
     \captionsetup{justification=centering, singlelinecheck=false}    
-    \caption{Standaard architectuur van een chatbot.}
+    \caption{Standaard architectuur van een chatbot \autocite{Adamopoulou2020}.}
     \label{fig:chatbotArchitectuur}
 \end{figure}
 
@@ -969,7 +969,7 @@ Een schematische voorstelling van de classificatie tussen soorten chatbots wordt
     \centering
     \includegraphics{F19_chatbotClassificatie.png}
     \captionsetup{justification=centering, singlelinecheck=false}   
-    \caption{Classificaties en soorten van een chatbot.}
+    \caption{Classificaties en soorten van een chatbot \autocite{Nimavat2017}.}
     \label{fig:chatbotTypes}
 \end{figure}
 
