--- a/bachproef/verwerkingresultaten.tex
+++ b/bachproef/verwerkingresultaten.tex
@@ -66,7 +66,7 @@ Doordat de drie eigenschappen kostprijs, integratie en afhankelijkheid toch weer
     \includegraphics[width=0.5\textwidth]{graphics/F34_mailQR-code.jpg}
     \captionsetup{justification=centering, singlelinecheck=false}
     
-    \caption{Een verstuurde mail afkomstig van Lockit Rentals met in bijlage de teruggewonnen QR-code.}
+    \caption{Een verstuurde mail afkomstig van Lockit Rentals met in bijlage de teruggewonnen QR-code \autocite{LockitRentals}.}
     \label{fig:resultatEmailQR-code}
 \end{figure}
 
