update alle refrenties checked

--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -39,7 +39,7 @@ De factoren en omgevingen die veranderen doorheen het experiment:
 Graag zou ik willen verwijzen naar de verkregen resultaten van het experiment waarbij de originele werkwijze voor het uitlezen van QR-codes is toegepast \ref{sec:resultatenQR-codeScanners}. Deze resultaten bieden waardevolle inzichten in het functioneren van de oorspronkelijke methode en vormen een belangrijke referentie voor het vergelijken van de prestaties van nieuwe QR-code scanner.
 
 Het zoeken naar een betere en snellere QR-code scanner software of hardware zal de snelheid van het scannen verhogen. Om een betrouwbare vergelijking te maken tussen de originele werkwijze en de nieuwe QR-code scanner, gaan de experimenten opnieuw uitgevoerd worden. Hierdoor kunnen we de resultaten van beide methoden op een nauwkeurige manier vergelijken en kan er tot een weloverwogen conclusie gekomen worden. In het hoofdstuk dat zich richt op de verwerking van de resultaten, zal dan ook uitvoerig worden ingegaan op de verschillen en overeenkomsten tussen de twee manieren van scannen bij een locker unit.
-
+\newpage
 \section{Chatbot requirements analyse}%
 \label{sec:chatbotRequirment}
 
