--- a/bachproef/proofofconcept.tex
+++ b/bachproef/proofofconcept.tex
@@ -358,7 +358,7 @@ Belangrijk om weten is dat er geen beperkingen zijn met betrekking tot de volgor
 
 \subsection{Stappen om QR-code terug te winnen via chatbot}
 \label{sec:stappenChatbot}
-Hieronder volgt een voorbeeld hoe je als festivalganger een QR-code kan terugwinnen via de chatbot. Deze stappen worden later gevisualiseerd in sectie \ref{sec:resultatenChatbot}.
+Hieronder volgt een voorbeeld hoe je als festivalganger een QR-code kan terugwinnen via de chatbot.
 \newline
 
 Primaire actor: Festivalganger die zijn of haar locker niet kan openen vanwege een verloren QR-code.
