--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -248,7 +248,7 @@ Op voorwaarde dat de gebruikersinformatie geldig is en er nog een locker beschik
 \label{sec:opbouwQR-codeVerkoop12}
 
 Wanneer de databank een nieuwe reservatie constateert, wordt er een trigger uitgevoerd. Een trigger is een procedure die verplicht uitgevoerd wordt als een welbepaalde tabel een aanpassing ondergaat \autocite{documentation}. In dit geval is het de tabel ‘reservations’. Deze trigger zal een methode aanroepen om het betalingsverzoek te creëren.
-De logistieke medewerkers kunnen huurders helpen indien hun QR-code te hard beschadigd is of als ze hun toegangscode tot de locker verloren zijn. Bij het aanmaken van toegangscodes bij logistieke medewerkers verloopt het proces op een alternatieve wijze.  Deze springen over het betalingsproces en verwerven direct een geldige QR-code. Zonder een aangemaakt betalingsveld in de databank op te slaan.  \ref{lst:aanmakenBetaling}
+De logistieke medewerkers kunnen huurders helpen indien hun QR-code te hard beschadigd is of als ze hun toegangscode tot de locker verloren zijn. Bij het aanmaken van toegangscodes bij logistieke medewerkers verloopt het proces op een alternatieve wijze.  Deze springen over het betalingsproces en verwerven direct een geldige QR-code. Zonder een aangemaakt betalingsveld in de databank op te slaan. Deze toelichting situeert zich in listing \ref{lst:aanmakenBetaling}.
 
 \begin{lstlisting}[caption={Valideert of er een betaling van toepassing is. Indien nodig creëert het een betaling en bewaard deze in de databank \autocite{LockitRentals}.}, label={lst:aanmakenBetaling}]
     /**
@@ -460,9 +460,9 @@ Aangezien de generatie van een QR-code dat voorgesteld is als afbeelding wat fro
         }
     \end{lstlisting}
 
-Lijn 3: De variabele ‘activeQrCode’ van type string is de publieke sleutel die wordt gebruikt om de QR-code te ontcijferen. \\
-Lijn 10 – 18: De ingestelde eigenschappen die gedefinieerd zijn om de QR-code aan te maken. Men kan de code naar zijn behoefte configureren \autocite{Sutheebanjard2010}. Een belangrijke waarde is hierbij de ‘ErrorCorrectionLevel’, deze verandert doorheen de applicatie op basis waar de QR-code afgebeeld moet worden. Hierdoor mag de QR-code voor 30\% beschadigd of gescheurd zijn. De scanner zal alsnog de afbeelding succesvol kunnen detecteren \autocite{Tiwari2016}. \\
-Lijn 29– 35: De tool die gehanteerd wordt om de QR-code te genereren is de bibliotheek ‘qrcode’ \autocite{pypi2023}. 
+Lijn 3 \ref{lst:qrComponent}: De variabele ‘activeQrCode’ van type string is de publieke sleutel die wordt gebruikt om de QR-code te ontcijferen. \\
+Lijn 10 – 18 \ref{lst:qrComponent}: De ingestelde eigenschappen die gedefinieerd zijn om de QR-code aan te maken. Men kan de code naar zijn behoefte configureren \autocite{Sutheebanjard2010}. Een belangrijke waarde is hierbij de ‘ErrorCorrectionLevel’, deze verandert doorheen de applicatie op basis waar de QR-code afgebeeld moet worden. Hierdoor mag de QR-code voor 30\% beschadigd of gescheurd zijn. De scanner zal alsnog de afbeelding succesvol kunnen detecteren \autocite{Tiwari2016}. \\
+Lijn 29– 35 \ref{lst:qrComponent}: De tool die gehanteerd wordt om de QR-code te genereren is de bibliotheek ‘qrcode’ \autocite{pypi2023}. 
 
 \newpage
 \section{Het incrypteren en decrypteren van QR-codes}%
@@ -518,19 +518,21 @@ Om na te gaan of dit bericht zijn oorspronkelijke data bevat zal de functie ‘v
 
 \begin{figure}[h]
     \centering
+    \includegraphics{F11_failedVerify.png}
+    \captionsetup{justification=centering, singlelinecheck=false}    
+    \caption{Bewijs dat bericht zich in geen originele  staat bevindt.}
+    \label{fig:verifyFailed}
+\end{figure}}
+
+\begin{figure}[h]
+    \centering
     \includegraphics{F10_verified.png}
     \captionsetup{justification=centering, singlelinecheck=false}    
     \caption{Bewijs dat bericht zich in originele  staat bevindt.}
     \label{fig:verified}
 \end{figure}}
 
-\begin{figure}[h]
-    \centering
-    \includegraphics{F11_failedVerify.png}
-    \captionsetup{justification=centering, singlelinecheck=false}    
-    \caption{Bewijs dat bericht zich in geen originele  staat bevindt.}
-    \label{fig:verifyFailed}
-\end{figure}}
+
 \\
 \newpage
 \newpage
@@ -886,7 +888,7 @@ De validatie functie is gebaseerd op de twee tijdspanne die aanwezig zijn in het
     }
     
 \end{lstlisting}
-\newpage
+
 \subsubsection{Stap 8: Openen van juiste locker door het sturen van serieel signaal} 
 
 Op basis van de correcte originele ontcijferde data kan de server de juiste sloten aansturen. De Raspberry Pi stuurt een serieel signaal naar de verschillende shift registers, die elk op zich verantwoordelijk zijn om een aantal verschillende sloten te besturen.
@@ -961,7 +963,7 @@ De start van de menselijke vraag tot een gegenereerd chatbot antwoord wordt voor
 \subsection{Classificatie chatbots}%
 \label{sec:chatbotTypes}
 
-Chatbots kunnen geclassificeerd worden door middel van een aantal eigenschappen \ref{fig:chatbotTypes} zoals het interactie level en op welke manier de antwoorden gegenereerd worden \autocite{Nimavat2017}.
+Chatbots kunnen geclassificeerd worden door middel van een aantal eigenschappen zoals het interactie level en op welke manier de antwoorden gegenereerd worden \autocite{Nimavat2017}.
 Een schematische voorstelling van de classificatie tussen soorten chatbots wordt weergegeven in figuur \ref{fig:chatbotTypes} \autocite{Tamrakar2021}.
 
 
