--- a/bachproef/VanDorpeLukasBP.tex
+++ b/bachproef/VanDorpeLukasBP.tex
@@ -91,12 +91,12 @@
 % TODO: Replace this with your own information
 \author{Lukas Van Dorpe}
 \supervisor{Dhr. L. Blondeel}
-\cosupervisor{Dhr. S. Vandenhoutem}
+\cosupervisor{Dhr. S. Vandenhouten}
 \title%[Optionele ondertitel]%
     {Ontwikkeling van gebruiksvriendelijke technologieën in het optimaliseren van lockerverhuur.}
 \academicyear{\advance\year by -1 \the\year--\advance\year by 1 \the\year}
-\examperiod{1}
-\degreesought{\IfLanguageName{dutch}{Professionele bachelor in de Toegepaste Informatica}{Bachelor of applied computer science}}
+\examperiod{2}
+\degreesought{\IfLanguageName{dutch}{Professionele bachelor in de toegepaste informatica}{Bachelor of applied computer science}}
 \partialthesis{false} %% To display 'in partial fulfilment'
 %\institution{Internshipcompany BVBA.}
 
